# paperfetcher

./: Cargo.toml  README.md  README_zh.md
.github/workflows/: release.yml
skills/paperfetcher/: SKILL.md
skills/skill-creator/: SKILL.md
src/: cli.rs  config.rs  error.rs  main.rs  output.rs  schema.rs
src/commands/: completions.rs  config.rs  fetch.rs  list.rs  lookup.rs  mod.rs  remove.rs  search.rs  status.rs
src/models/: mod.rs  paper.rs  response.rs
src/sources/: crossref.rs  mod.rs  openalex.rs  semantic_scholar.rs  unpaywall.rs
src/storage/: download.rs  index.rs  mod.rs
